--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+  equatable: ^2.0.0
+  dio: ^4.0.0
 
 dev_dependencies:
   bloc_test: ^9.0.2
